
syntax = "proto3";

message Entry {
    uint32 type = 1; //required
    string path = 2; //required

    //Used for Write command
    bytes data = 3;  // optional
    uint64 offset = 4;  // optional

   	//Used for Write and Truncate commands
    uint64 length = 5;  // optional

    //Used for Link and Rename commands
    string old_path = 6;  // optional
    string new_path = 7;  // optional

    //Used for Create, Chmod and Mkdir commands
    uint32 mode = 8;  // optional

    //Used for Utimes command
    int64 access_seconds = 9;  // optional
    int64 access_nanoseconds = 10;  // optional
    int64 modify_seconds = 11;  // optional
    int64 modify_nanoseconds = 12;  // optional
}
